--- a/app/src/main/res/layout/activity_editar_persona.xml
+++ b/app/src/main/res/layout/activity_editar_persona.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="#FFFDE7"
+    android:background="#FFF6A4"
     tools:context=".EditarPersonaActivity">
 
     <TextView
@@ -22,7 +23,7 @@
         android:id="@+id/etNombreEditar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nuevo nombre"
+        android:hint="Nuevo nombre de la persona"
         android:inputType="textPersonName"
         android:backgroundTint="#FF9800"
         android:layout_marginBottom="10dp"
@@ -32,7 +33,7 @@
         android:id="@+id/etEdadEditar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nueva edad (años)"
+        android:hint="Cambia la edad de la persona"
         android:inputType="number"
         android:maxLength="3"
         android:backgroundTint="#FF9800"
@@ -45,7 +46,13 @@
         android:layout_height="wrap_content"
         android:text="Guardar Cambios"
         android:backgroundTint="#FF9800"
-        android:textColor="@android:color/white"
+        android:textColor="@color/yellow"
         android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo_lista_usuarios" />
 
 </LinearLayout>
